# Atlas-Queue

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml
docs/issues/: phase-1-core-queue.md
migrations/: 0001_create_tasks.sql
src/: lib.rs  main.rs
src/api/: dto.rs  handlers.rs  mod.rs  routes.rs
src/engine/: core.rs  handler.rs  mod.rs  registry.rs  task.rs
src/pool/: control.rs  dispatcher.rs  mod.rs  worker.rs
